--- a/style.css
+++ b/style.css
@@ -20,9 +20,10 @@
     display: none;
 }
 
-.body-color {
+body {
     /* height: 100vh;
     background-size: cover; */
+    padding-bottom: 50px;
     background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
 }
 
