--- a/style.css
+++ b/style.css
@@ -2,29 +2,37 @@
     width: 8px;
 }
 
- ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     border-radius: 5px;
     background: #dfdfdf94;
 }
 
- ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background: #888;
     border-radius: 5px;
 }
 
- ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     background: #555;
 }
+
 
 .customNav::-webkit-scrollbar {
     display: none;
 }
+
+
+
 
 body {
     /* height: 100vh;
     background-size: cover; */
     padding-bottom: 50px;
     background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
+}
+
+a {
+    font-weight: 500;
 }
 
 .nav-icon {
@@ -85,6 +93,7 @@ body {
     .games-like {
         display: none;
     }
+
     .staff-picks {
         background: transparent;
         height: auto;
